# pixel-agents-takopi-custom

./: .gitignore  progress.md
scripts/: generate-default-layout.py  generate-floors.py
server/: agent_manager.py  app.py  asset_loader.py  constants.py  event_mapper.py  layout_store.py  pyproject.toml  telegram_bridge.py  timer_manager.py
webview-ui/: .gitignore
webview-ui/public/assets/: default-layout.json
webview-ui/src/: App.tsx  assetLoaderClient.ts  vscodeApi.ts
webview-ui/src/components/: ChatInput.tsx  SettingsModal.tsx
webview-ui/src/hooks/: useExtensionMessages.ts
